php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #39656 Crash when calling fetch() on a PDO statment object after closeCursor()
Submitted: 2006-11-28 04:29 UTC Modified: 2006-11-28 16:28 UTC
From: randy at rcs-comp dot com Assigned:
Status: Closed Package: PDO related
PHP Version: 5.2.0 OS: Windows XP
Private report: No CVE-ID: None
 [2006-11-28 04:29 UTC] randy at rcs-comp dot com
Description:
------------
After calling the example code using CLI on Windows XP, CLI appears to crash.  I get the XP notification box asking to send info to Microsoft, however the PHP process is still listed in the task manager and must be killed (end process tree) in order to get the command prompt working correctly.

I installed the .pdb files from snaps.php.net in the hopes of providing a backtrace, but I never got the debug interface that the instructions said I would.  If you need a backtrace, please point me to better instructions on how to create one.



Reproduce code:
---------------
http://www.rcs-comp.com/phpcode/simple_pdo_test4.php.txt

Expected result:
----------------
>php simple_pdo_test4.php
Array
(
    [id] => 1
    [0] => 1
    [user] => user1
    [1] => user1
    [email] => user1@example.com
    [2] => user1@example.com
    [time] => 1164686920
    [3] => 1164686920
    [message] => this is my message 1
    [4] => this is my message 1
    [confirmed] => 0
    [5] => 0
)
bool( false )

Actual result:
--------------
Array
(
    [id] => 1
    [0] => 1
    [user] => user1
    [1] => user1
    [email] => user1@example.com
    [2] => user1@example.com
    [time] => 1164686920
    [3] => 1164686920
    [message] => this is my message 1
    [4] => this is my message 1
    [confirmed] => 0
    [5] => 0
)
// at this point I get the XP dialog box telling me "CLI has encountered a problem and needs to close...Please tell Microsoft about this problem..."

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-11-28 10:53 UTC] tony2001@php.net
Wez, please check out this patch:
http://tony2001.phpclub.net/dev/tmp/bug39656.diff
 [2006-11-28 16:28 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 06:00:02 2026 UTC