Fixed bug #39656 (crash when calling fetch() on a PDO statment object after closeCursor()).